Fixed scrolling behavior not working on firefox.

--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body{
 
 html{
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 a{
